syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.e8yes.service";
option java_outer_classname = "ServiceSystemProto";

package org.e8yes.services;

message VersionResponse {
    string version = 1;
}

message Empty {

}

service SystemService {
    rpc Version (Empty) returns (VersionResponse) {}
}
